# kros

./: .gitignore  README.md
image/: .dockerignore  Dockerfile  README.md  build.sh  kros-motd.sh  pyproject.toml
image/src/kros/: __init__.py  _audit.py  cli.py
image/src/kros/commands/: __init__.py  caps.py  file.py  http.py  memory.py  read.py  sandbox.py
image/src/kros/commands/browse/: __init__.py  _runtime.py  _tabs.py  contract.py  driver.py  formatting.py  lightpanda.py  session.py
image/src/kros/commands/browse/drivers/: __init__.py
image/src/kros/commands/browse/drivers/lightpanda_mcp/: _paths.py  daemon.py  engine.py  proxy.py
image/src/kros/commands/browser/: __init__.py  _tabs.py  contract.py  formatting.py
image/src/kros/commands/browser/drivers/: __init__.py
image/src/kros/commands/browser/drivers/lightpanda_mcp/: __init__.py  _paths.py  daemon.py  engine.py  proxy.py
image/src/kros/commands/shell/: __init__.py  _store.py  _unwrap.py  jobs.py  kill.py  logs.py  run.py  spawn.py
launcher/: install.sh  kros
